# robot_mission_control

./: .gitignore  README.md
src/actions_py/: package.xml  setup.py
src/actions_py/actions_py/: count_until_client.py  count_until_server.py
src/mission_bringup/: package.xml  setup.py
src/mission_bringup/config/: brain_params.yaml  sensor_params.yaml
src/mission_bringup/launch/: mission_dispatcher.launch.py
src/mission_py/: package.xml  setup.cfg  setup.py
src/mission_py/mission_py/: mission_brain_node.py  status_reporter_node.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: emergency_node.cpp  minimal_client.cpp  minimal_publisher.cpp  minimal_server.cpp  minimal_subscriber.cpp  monitor_node.cpp  sensor_node.cpp
src/my_robot_controller/launch/: robot_sensor_launch.py
src/my_robot_controller/my_robot_controller/: emergency_node.py  monitor_node.py  my_first_loop.py  my_first_node.py  my_first_pub.py  my_first_sub.py  sensor_node.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interface/: CMakeLists.txt  package.xml
src/robot_interface/msg/: MissionStatus.msg  SensorArray.msg
